[package]
name = "pomc"
version = "1.1.2"
description = "Client program for pomd pomodoro daemon"
license = "MIT OR Apache-2.0"
keywords = ["productivity", "pomodoro", "daemon"]
repository = "https://github.com/exvacuum/pomc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.8", features = ["derive"] }
zbus = "3.14.1"
