[package]
name = "pomc"
version = "1.1.3"
description = "Client program for pomd pomodoro daemon"
license = "0BSD OR MIT OR Apache-2.0"
keywords = ["productivity", "pomodoro", "daemon"]
repository = "https://git.exvacuum.dev/pomc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.13", features = ["attributes"] }
clap = { version = "4.5", features = ["derive"] }
zbus = "5.1"
